--- a/Desktop App/widget.ui
+++ b/Desktop App/widget.ui
@@ -35,6 +35,9 @@
      <height>32</height>
     </rect>
    </property>
+   <property name="mouseTracking">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>LEFT</string>
    </property>
