--- a/Alpha2/mainwindow.ui
+++ b/Alpha2/mainwindow.ui
@@ -503,6 +503,19 @@ border: solid;</string>
          <string>Back</string>
         </property>
        </widget>
+       <widget class="QLabel" name="label_7">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>130</y>
+          <width>57</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
