--- a/Alpha2/mainwindow.ui
+++ b/Alpha2/mainwindow.ui
@@ -356,21 +356,21 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="hoverButton">
         <property name="geometry">
          <rect>
-          <x>31</x>
-          <y>90</y>
+          <x>30</x>
+          <y>150</y>
           <width>121</width>
           <height>51</height>
          </rect>
         </property>
         <property name="text">
-         <string>ON/OFF</string>
+         <string>ON</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_4">
         <property name="geometry">
          <rect>
           <x>240</x>
-          <y>100</y>
+          <y>160</y>
           <width>91</width>
           <height>21</height>
          </rect>
@@ -395,7 +395,7 @@ border: solid;</string>
         <property name="geometry">
          <rect>
           <x>40</x>
-          <y>155</y>
+          <y>220</y>
           <width>101</width>
           <height>31</height>
          </rect>
@@ -416,7 +416,7 @@ border: solid;</string>
         <property name="geometry">
          <rect>
           <x>150</x>
-          <y>140</y>
+          <y>200</y>
           <width>51</width>
           <height>32</height>
          </rect>
@@ -433,7 +433,7 @@ border: 1px solid black;</string>
         <property name="geometry">
          <rect>
           <x>150</x>
-          <y>170</y>
+          <y>230</y>
           <width>51</width>
           <height>32</height>
          </rect>
@@ -450,8 +450,8 @@ border: 1px solid black;</string>
         <property name="geometry">
          <rect>
           <x>230</x>
-          <y>160</y>
-          <width>101</width>
+          <y>220</y>
+          <width>111</width>
           <height>21</height>
          </rect>
         </property>
@@ -469,6 +469,44 @@ border: 1px solid black;</string>
         </property>
         <property name="text">
          <string>Hover Time</string>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="autoButton">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>100</y>
+          <width>121</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>ON</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_8">
+        <property name="geometry">
+         <rect>
+          <x>230</x>
+          <y>110</y>
+          <width>121</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Arial Rounded MT Bold</family>
+          <pointsize>15</pointsize>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;</string>
+        </property>
+        <property name="text">
+         <string>Auto Movement</string>
         </property>
        </widget>
       </widget>
