--- a/Alpha2/mainwindow.ui
+++ b/Alpha2/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgb(67, 83, 106);</string>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -51,7 +51,7 @@
          <bool>true</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(0, 0, 255);
+         <string notr="true">background-color: rgb(63, 76, 255);
 border-style: solid;
 
 </string>
@@ -358,7 +358,7 @@ border: solid;</string>
          <rect>
           <x>31</x>
           <y>90</y>
-          <width>121</width>
+          <width>161</width>
           <height>51</height>
          </rect>
         </property>
@@ -396,7 +396,7 @@ border: solid;</string>
          <rect>
           <x>40</x>
           <y>155</y>
-          <width>101</width>
+          <width>81</width>
           <height>31</height>
          </rect>
         </property>
@@ -415,15 +415,16 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_up_button">
         <property name="geometry">
          <rect>
-          <x>150</x>
-          <y>140</y>
+          <x>130</x>
+          <y>150</y>
           <width>51</width>
           <height>32</height>
          </rect>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(240, 223, 51);
-border: 1px solid black;</string>
+border: 1px solid black;
+</string>
         </property>
         <property name="text">
          <string>U</string>
@@ -432,14 +433,14 @@ border: 1px solid black;</string>
        <widget class="QHoverSensitiveButton" name="hover_time_down_button">
         <property name="geometry">
          <rect>
-          <x>150</x>
-          <y>170</y>
+          <x>130</x>
+          <y>180</y>
           <width>51</width>
           <height>32</height>
          </rect>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(29, 241, 240);
+         <string notr="true">background-color: rgb(127, 169, 255);
 border: 1px solid black;</string>
         </property>
         <property name="text">
@@ -450,7 +451,7 @@ border: 1px solid black;</string>
         <property name="geometry">
          <rect>
           <x>230</x>
-          <y>160</y>
+          <y>170</y>
           <width>101</width>
           <height>21</height>
          </rect>
@@ -473,19 +474,6 @@ border: 1px solid black;</string>
        </widget>
       </widget>
       <widget class="QWidget" name="tutorialPage">
-       <widget class="QLabel" name="label_5">
-        <property name="geometry">
-         <rect>
-          <x>170</x>
-          <y>30</y>
-          <width>57</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Tutorials</string>
-        </property>
-       </widget>
        <widget class="QHoverSensitiveButton" name="backButton_2">
         <property name="geometry">
          <rect>
@@ -502,6 +490,210 @@ border: solid;</string>
         <property name="text">
          <string>Back</string>
         </property>
+       </widget>
+       <widget class="QLabel" name="label_7">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>30</y>
+          <width>391</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Arial Rounded MT Bold</family>
+          <pointsize>25</pointsize>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;</string>
+        </property>
+        <property name="text">
+         <string>TUTORIALS</string>
+        </property>
+       </widget>
+       <widget class="QTabWidget" name="tabWidget">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>90</y>
+          <width>381</width>
+          <height>211</height>
+         </rect>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="tab">
+         <attribute name="title">
+          <string>Controls</string>
+         </attribute>
+         <widget class="QWidget" name="widget" native="true">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>0</y>
+            <width>351</width>
+            <height>181</height>
+           </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(107, 164, 227)</string>
+          </property>
+          <widget class="QHoverSensitiveButton" name="fetchButton_2">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>90</y>
+             <width>101</width>
+             <height>41</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+             <weight>50</weight>
+             <italic>false</italic>
+             <bold>false</bold>
+            </font>
+           </property>
+           <property name="mouseTracking">
+            <bool>true</bool>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(63, 76, 255);
+border: 1px solid black;
+font: 14pt ;
+</string>
+           </property>
+           <property name="text">
+            <string>Fetch</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_5">
+           <property name="geometry">
+            <rect>
+             <x>30</x>
+             <y>20</y>
+             <width>91</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>18</pointsize>
+             <weight>50</weight>
+             <italic>false</italic>
+             <bold>false</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">font: 18pt ;</string>
+           </property>
+           <property name="text">
+            <string>Hover + Hold</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_8">
+           <property name="geometry">
+            <rect>
+             <x>50</x>
+             <y>40</y>
+             <width>61</width>
+             <height>16</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>18</pointsize>
+             <weight>50</weight>
+             <italic>false</italic>
+             <bold>false</bold>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">font: 18pt;</string>
+           </property>
+           <property name="text">
+            <string>to Select</string>
+           </property>
+          </widget>
+          <widget class="QWidget" name="widget_2" native="true">
+           <property name="geometry">
+            <rect>
+             <x>150</x>
+             <y>10</y>
+             <width>191</width>
+             <height>151</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background: rgb(212, 212, 212)</string>
+           </property>
+           <widget class="QLabel" name="label_9">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>0</y>
+              <width>171</width>
+              <height>31</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Move cursor over buttons</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_10">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>30</y>
+              <width>171</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Hold for ~3 secs</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_11">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>80</y>
+              <width>171</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Fetch will call the arm</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_12">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>100</y>
+              <width>171</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>to fetch the wand</string>
+            </property>
+           </widget>
+          </widget>
+         </widget>
+        </widget>
+        <widget class="QWidget" name="tab_2">
+         <attribute name="title">
+          <string>Tab 2</string>
+         </attribute>
+        </widget>
        </widget>
       </widget>
      </widget>
