update main screen

--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -21,10 +21,10 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="styleSheet">
-       <string notr="true">background: rgb(51, 64, 88);</string>
+       <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -33,10 +33,10 @@
        <widget class="QHoverSensitiveButton" name="fetchButton">
         <property name="geometry">
          <rect>
-          <x>90</x>
+          <x>190</x>
           <y>90</y>
-          <width>211</width>
-          <height>61</height>
+          <width>271</width>
+          <height>81</height>
          </rect>
         </property>
         <property name="font">
@@ -51,22 +51,32 @@
          <bool>true</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(0, 0, 255);
+         <string notr="true">background: rgba(51, 64, 88, 0%);
 border-style: solid;
 
 </string>
         </property>
         <property name="text">
-         <string>Fetch</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/fetch.png</normaloff>:/images/fetch.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>180</width>
+          <height>150</height>
+         </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="settingButton">
         <property name="geometry">
          <rect>
-          <x>240</x>
-          <y>190</y>
-          <width>100</width>
-          <height>100</height>
+          <x>330</x>
+          <y>180</y>
+          <width>131</width>
+          <height>131</height>
          </rect>
         </property>
         <property name="font">
@@ -76,33 +86,46 @@ border-style: solid;
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(255, 233, 39);
+         <string notr="true">background: rgba(51, 64, 88, 0%);
 border-style: solid;
-max-width:100px;
-max-height:100px;
-min-width:100px;
-min-height:100px;
+
 </string>
         </property>
         <property name="text">
-         <string>Settings</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/settings.png</normaloff>:/images/settings.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>120</width>
+          <height>120</height>
+         </size>
         </property>
        </widget>
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
-          <x>160</x>
+          <x>260</x>
           <y>20</y>
-          <width>71</width>
+          <width>121</width>
           <height>20</height>
          </rect>
         </property>
         <property name="font">
          <font>
-          <family>Arial Narrow</family>
-          <pointsize>15</pointsize>
-          <underline>true</underline>
+          <family>.Helvetica Neue DeskInterface</family>
+          <pointsize>20</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;</string>
         </property>
         <property name="text">
          <string>Hover + Hold</string>
@@ -111,17 +134,24 @@ min-height:100px;
        <widget class="QLabel" name="label_2">
         <property name="geometry">
          <rect>
-          <x>170</x>
-          <y>40</y>
-          <width>51</width>
-          <height>16</height>
+          <x>280</x>
+          <y>50</y>
+          <width>81</width>
+          <height>20</height>
          </rect>
         </property>
         <property name="font">
          <font>
-          <family>Arial Narrow</family>
-          <pointsize>15</pointsize>
+          <family>.Helvetica Neue DeskInterface</family>
+          <pointsize>20</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;</string>
         </property>
         <property name="text">
          <string>to Select</string>
@@ -130,10 +160,10 @@ min-height:100px;
        <widget class="QHoverSensitiveButton" name="tutorialButton">
         <property name="geometry">
          <rect>
-          <x>50</x>
-          <y>190</y>
-          <width>100</width>
-          <height>100</height>
+          <x>190</x>
+          <y>180</y>
+          <width>131</width>
+          <height>131</height>
          </rect>
         </property>
         <property name="font">
@@ -143,16 +173,23 @@ min-height:100px;
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(90, 225, 143);
+         <string notr="true">background: rgba(51, 64, 88, 0%);
 border-style: solid;
-max-width:100px;
-max-height:100px;
-min-width:100px;
-min-height:100px;
+
 </string>
         </property>
         <property name="text">
-         <string>Tutorials</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/tutorials.png</normaloff>:/images/tutorials.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>120</width>
+          <height>130</height>
+         </size>
         </property>
        </widget>
       </widget>
@@ -392,8 +429,8 @@ border: solid;</string>
        <widget class="QLabel" name="ready_label">
         <property name="geometry">
          <rect>
-          <x>210</x>
-          <y>10</y>
+          <x>200</x>
+          <y>20</y>
           <width>201</width>
           <height>20</height>
          </rect>
@@ -401,6 +438,7 @@ border: solid;</string>
         <property name="styleSheet">
          <string notr="true">qproperty-alignment: AlignCenter;
 font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
 </string>
         </property>
         <property name="text">
@@ -477,13 +515,22 @@ font: 30pt &quot;Helvetica&quot;;</string>
          </rect>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: red;
-font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+         <string notr="true">background-color: rgba(0, 0, 0, 0%);
 border: solid;
 </string>
         </property>
         <property name="text">
-         <string>Back</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/images/back.png</normaloff>:/images/back.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>60</width>
+          <height>60</height>
+         </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="hoverButton">
