--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -1,5 +1,4 @@
 <RCC>
-    <qresource prefix="/"/>
     <qresource prefix="/images">
         <file>back.png</file>
         <file>backward.png</file>
@@ -9,5 +8,8 @@
         <file>up.png</file>
         <file>release.png</file>
         <file>left.png</file>
+        <file>fetch.png</file>
+        <file>settings.png</file>
+        <file>tutorials.png</file>
     </qresource>
 </RCC>
